Dockerfile のベースイメージを Ubuntu に戻しました。

--- a/rest/Dockerfile
+++ b/rest/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11-jre-slim
+FROM ubuntu:20.04
 
 LABEL maintainer OPAP-JP
 
@@ -6,11 +6,33 @@ LABEL maintainer OPAP-JP
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
-RUN apt-get update \
-    && apt-get -y install locales \
+RUN apt-get update
+RUN apt-get install -y locales \
     && locale-gen en_US.UTF-8
 
-COPY target/material-explorer.jar /opt/material-explorer/material-explorer.jar
+# 依存パッケージを取得します
+# Scala, sbt のインストールを行ないます
+RUN apt-get install -y default-jdk apt-transport-https scala dirmngr bc
+RUN echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list \
+    && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823 \
+    && apt-get update \
+    && apt-get install -y sbt
+RUN echo exit | sbt -Dsbt.rootdir=true
+
+# アプリケーションのソースをコピーし、ビルドします
+RUN mkdir /tmp/material-explorer
+RUN mkdir /opt/material-explorer
+WORKDIR /tmp/material-explorer
+COPY build.sbt .
+COPY project project
+RUN sbt clean && sbt -Dpackaging.type=jar update
+
+# ビルド
+COPY ./project ./project
+COPY ./src ./src
+RUN sbt -Dpackaging.type=jar assembly
+RUN mv target/material-explorer.jar /opt/material-explorer/
+
 WORKDIR /opt/material-explorer
 
 CMD ["java", "-jar", "material-explorer.jar", "server", "config.yaml"]
