--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update \
     && apt-get install -y curl gnupg \
     && curl -sL https://deb.nodesource.com/setup_8.x | bash - \
     && apt-get install -y nodejs
+RUN apt-get install -y npm
 
 # 設定ファイルを配置します
 COPY conf/nginx.conf /etc/nginx
