--- a/web/package.json
+++ b/web/package.json
@@ -1,30 +1,37 @@
 {
   "name": "material-explorer",
   "version": "0.2.0",
+  "private": true,
   "description": "material-explorer",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/opap-jp/material-explorer.git"
+  "author": {
+    "name": "OPAP-JP"
   },
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "js-joda": "^1.5.2",
     "typescript-optional": "^1.5.0",
-    "vue": "^2.5.13",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^6.0.0",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.7",
-    "@vue/cli-service": "^3.0.0-beta.7",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "typescript": "^2.5.3",
-    "vue-template-compiler": "^2.5.13"
+    "typescript": "~4.1.5",
+    "vue-template-compiler": "^2.6.11"
   },
   "postcss": {
     "plugins": {
@@ -34,8 +41,18 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not ie <= 8",
+    "not dead"
   ],
-  "author": "OPAP-JP",
-  "license": "MIT"
+  "_id": "material-explorer@0.2.0",
+  "bugs": {
+    "url": "https://github.com/opap-jp/material-explorer/issues"
+  },
+  "homepage": "https://github.com/opap-jp/material-explorer#readme",
+  "license": "MIT",
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/opap-jp/material-explorer.git"
+  }
 }
