--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update \
     && curl -sL https://deb.nodesource.com/setup_8.x | bash - \
     && apt-get install -y nodejs
 RUN apt-get install -y npm
+RUN npm install -g yarn
 
 # 設定ファイルを配置します
 COPY conf/nginx.conf /etc/nginx
@@ -18,12 +19,12 @@ COPY conf/default.conf /etc/nginx/conf.d
 RUN mkdir /tmp/material-explorer
 COPY package.json /tmp/material-explorer
 WORKDIR /tmp/material-explorer
-RUN npm install
+RUN yarn
 COPY . /tmp/material-explorer
 
 ARG service_host
 ENV SERVICE_HOST="$service_host"
-RUN npm run build
+RUN yarn build
 
 # アセットを配置します
 RUN cp -R dist/* /usr/share/nginx/html
